--- a/Main/index.html
+++ b/Main/index.html
@@ -29,7 +29,19 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+   
+    <div>
+
+
+    </div>
+
+    <div>
+
+        
+    </div>
+         
+
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
