--- a/Main/index.html
+++ b/Main/index.html
@@ -28,19 +28,27 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
+    <!-- section for the events -->
     <div class="container">
    
     <div>
+     9am
+
+    </div>
+
+    <div>
+     10am
+
+
+    </div>
+     11am    
 
 
     </div>
 
     <div>
-
-        
-    </div>
-         
-
+     12pm
 
     </div>
 
