added div to time

--- a/Main/index.html
+++ b/Main/index.html
@@ -33,51 +33,51 @@
     <div class="container">
    
     <div>
-     9am
+     <div>9am</div>
 
     </div>
 
     <div>
-     10am
+     <div>10am</div>
 
 
     </div>
-     11am    
-
-
-    </div>
-
-    <div>
-     12pm
-
-    </div>
-
-    <div>
-     1pm
+     <div>11am</div>   
 
 
     </div>
 
     <div>
-     2pm
+     <div>12pm</div>
 
     </div>
 
     <div>
-     3pm
+     <div>1pm</div>
 
 
     </div>
 
     <div>
-     4pm
+    <div>2pm</div>
 
     </div>
 
     <div>
-     5pm 
+     <div>3pm</div>
 
-     
+
+    </div>
+
+    <div>
+     <div>4pm</div>
+
+    </div>
+
+    <div>
+     <div>5pm</div>
+
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
