added row class to div

--- a/Main/index.html
+++ b/Main/index.html
@@ -32,49 +32,51 @@
     <!-- section for the events -->
     <div class="container">
    
-    <div>
+    <div class="row">
      <div>9am</div>
 
     </div>
 
-    <div>
+    <div class="row">
      <div>10am</div>
 
 
     </div>
+
+    <div class="row">
      <div>11am</div>   
 
 
     </div>
 
-    <div>
+    <div class="row">
      <div>12pm</div>
 
     </div>
 
-    <div>
+    <div class="row">
      <div>1pm</div>
 
 
     </div>
 
-    <div>
+    <div class="row">
     <div>2pm</div>
 
     </div>
 
-    <div>
+    <div class="row">
      <div>3pm</div>
 
 
     </div>
 
-    <div>
+    <div class="row">
      <div>4pm</div>
 
     </div>
 
-    <div>
+    <div class="row">
      <div>5pm</div>
 
 
