--- a/Main/index.html
+++ b/Main/index.html
@@ -33,51 +33,51 @@
     <div class="container">
    
     <div class="row">
-     <div>9am</div>
+     <div class="col-sm-auto">9am</div>
 
     </div>
 
     <div class="row">
-     <div>10am</div>
-
-
-    </div>
-
-    <div class="row">
-     <div>11am</div>   
+     <div class="col-sm-auto">10am</div>
 
 
     </div>
 
     <div class="row">
-     <div>12pm</div>
-
-    </div>
-
-    <div class="row">
-     <div>1pm</div>
+     <div class="col-sm-auto">11am</div>   
 
 
     </div>
 
     <div class="row">
-    <div>2pm</div>
+     <div class="col-sm-auto">12pm</div>
 
     </div>
 
     <div class="row">
-     <div>3pm</div>
+     <div class="col-sm-auto">1pm</div>
 
 
     </div>
 
     <div class="row">
-     <div>4pm</div>
+    <div class="col-sm-auto">2pm</div>
 
     </div>
 
     <div class="row">
-     <div>5pm</div>
+     <div class="col-sm-auto">3pm</div>
+
+
+    </div>
+
+    <div class="row">
+     <div class="col-sm-auto">4pm</div>
+
+    </div>
+
+    <div class="row">
+     <div class="col-sm-auto">5pm</div>
 
 
     </div>
