--- a/Main/index.html
+++ b/Main/index.html
@@ -33,59 +33,59 @@
     <div class="container">
    
     <div class="row">
-     <div class="col-sm-auto">9am</div>
+     <div class="col-sm-1">9am</div>
 
      <input type="text" class="input-group-text col-md-8">
 
     </div>
 
     <div class="row">
-     <div class="col-sm-auto">10am</div>
+     <div class="col-sm-1">10am</div>
      <input type="text" class="input-group-text col-md-8">
 
     </div>
 
     <div class="row">
-     <div class="col-sm-auto">11am</div> 
+     <div class="col-sm-1">11am</div> 
      <input type="text" class="input-group-text col-md-8">  
 
 
     </div>
 
     <div class="row">
-     <div class="col-sm-auto">12pm</div>
+     <div class="col-sm-1">12pm</div>
      <input type="text" class="input-group-text col-md-8">
 
     </div>
 
     <div class="row">
-     <div class="col-sm-auto">1pm</div>
+     <div class="col-sm-1">1pm</div>
      <input type="text" class="input-group-text col-md-8">
 
 
     </div>
 
     <div class="row">
-    <div class="col-sm-auto">2pm</div>
+    <div class="col-sm-1">2pm</div>
     <input type="text" class="input-group-text col-md-8">
 
     </div>
 
     <div class="row">
-     <div class="col-sm-auto">3pm</div>
+     <div class="col-sm-1">3pm</div>
      <input type="text" class="input-group-text col-md-8">
 
 
     </div>
 
     <div class="row">
-     <div class="col-sm-auto">4pm</div>
+     <div class="col-sm-1">4pm</div>
      <input type="text" class="input-group-text col-md-8">
 
     </div>
 
     <div class="row">
-     <div class="col-sm-auto">5pm</div>
+     <div class="col-sm-1">5pm</div>
      <input type="text" class="input-group-text col-md-8">
 
 
