--- a/Main/index.html
+++ b/Main/index.html
@@ -34,33 +34,36 @@
    
     <div class="row">
      <div class="col-sm-1">9am</div>
-
-     <input type="text" class="input-group-text col-md-8">
+    <input type="text" class="input-group-text col-md-8">
+    <button class="btn saveBtn col-sm-1"></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">10am</div>
      <input type="text" class="input-group-text col-md-8">
+     <button class="btn saveBtn col-sm-1"></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">11am</div> 
      <input type="text" class="input-group-text col-md-8">  
-
+     <button class="btn saveBtn col-sm-1"></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">12pm</div>
      <input type="text" class="input-group-text col-md-8">
+     <button class="btn saveBtn col-sm-1"></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">1pm</div>
      <input type="text" class="input-group-text col-md-8">
+     <button class="btn saveBtn col-sm-1"></button>
 
 
     </div>
@@ -68,12 +71,14 @@
     <div class="row">
     <div class="col-sm-1">2pm</div>
     <input type="text" class="input-group-text col-md-8">
+    <button class="btn saveBtn col-sm-1"></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">3pm</div>
      <input type="text" class="input-group-text col-md-8">
+     <button class="btn saveBtn col-sm-1"></button>
 
 
     </div>
@@ -81,12 +86,14 @@
     <div class="row">
      <div class="col-sm-1">4pm</div>
      <input type="text" class="input-group-text col-md-8">
+     <button class="btn saveBtn col-sm-1"></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">5pm</div>
      <input type="text" class="input-group-text col-md-8">
+     <button class="btn saveBtn col-sm-1"></button>
 
 
     </div>
