--- a/Main/index.html
+++ b/Main/index.html
@@ -30,40 +30,41 @@
     </header>
 
     <!-- section for the events -->
+    <section class='text-center notification' id="notify">Appointment Added to <code>localStorage</code> ✔️</section>
     <div class="container">
    
     <div class="row">
      <div class="col-sm-1">9am</div>
     <input type="text" class="input-group-text col-md-8">
-    <button class="btn saveBtn col-sm-1"></button>
+    <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">10am</div>
      <input type="text" class="input-group-text col-md-8">
-     <button class="btn saveBtn col-sm-1"></button>
+     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">11am</div> 
      <input type="text" class="input-group-text col-md-8">  
-     <button class="btn saveBtn col-sm-1"></button>
+     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">12pm</div>
      <input type="text" class="input-group-text col-md-8">
-     <button class="btn saveBtn col-sm-1"></button>
+     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">1pm</div>
      <input type="text" class="input-group-text col-md-8">
-     <button class="btn saveBtn col-sm-1"></button>
+     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
 
     </div>
@@ -71,14 +72,14 @@
     <div class="row">
     <div class="col-sm-1">2pm</div>
     <input type="text" class="input-group-text col-md-8">
-    <button class="btn saveBtn col-sm-1"></button>
+    <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">3pm</div>
      <input type="text" class="input-group-text col-md-8">
-     <button class="btn saveBtn col-sm-1"></button>
+     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
 
     </div>
@@ -86,14 +87,14 @@
     <div class="row">
      <div class="col-sm-1">4pm</div>
      <input type="text" class="input-group-text col-md-8">
-     <button class="btn saveBtn col-sm-1"></button>
+     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div class="row">
      <div class="col-sm-1">5pm</div>
      <input type="text" class="input-group-text col-md-8">
-     <button class="btn saveBtn col-sm-1"></button>
+     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
 
     </div>
