--- a/Main/index.html
+++ b/Main/index.html
@@ -35,35 +35,35 @@
    
     <div id="9" class="row">
      <div class="col-sm-1">9am</div>
-    <input type="text" class="input-group-text col-md-8">
+    <input type="text" class="input-group-text col-md-8 textEvent">
     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div id="10" class="row">
      <div class="col-sm-1">10am</div>
-     <input type="text" class="input-group-text col-md-8">
+     <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div id="11" class="row">
      <div class="col-sm-1">11am</div> 
-     <input type="text" class="input-group-text col-md-8">  
+     <input type="text" class="input-group-text col-md-8 textEvent">  
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div id="12" class="row">
      <div class="col-sm-1">12pm</div>
-     <input type="text" class="input-group-text col-md-8">
+     <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div id="13" class="row">
      <div class="col-sm-1">1pm</div>
-     <input type="text" class="input-group-text col-md-8">
+     <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
 
@@ -71,14 +71,14 @@
 
     <div id="14" class="row">
     <div class="col-sm-1">2pm</div>
-    <input type="text" class="input-group-text col-md-8">
+    <input type="text" class="input-group-text col-md-8 textEvent">
     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div id="15" class="row">
      <div class="col-sm-1">3pm</div>
-     <input type="text" class="input-group-text col-md-8">
+     <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
 
@@ -86,14 +86,14 @@
 
     <div id="16" class="row">
      <div class="col-sm-1">4pm</div>
-     <input type="text" class="input-group-text col-md-8">
+     <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
     <div id="17" class="row">
      <div class="col-sm-1">5pm</div>
-     <input type="text" class="input-group-text col-md-8">
+     <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
 
