added hour block

--- a/Main/index.html
+++ b/Main/index.html
@@ -30,38 +30,38 @@
     </header>
 
     <!-- section for the events -->
-    <section class='text-center notification' id="notify">Appointment Added to <code>localStorage</code> ✔️</section>
+    <section class="text-center bulletin" id="notice">Appointment Added to <code>localStorage</code> ✔️</section>
     <div class="container">
    
-    <div id="9" class="row">
+    <div id="9" class="row hour-block">
      <div class="col-sm-1">9am</div>
     <input type="text" class="input-group-text col-md-8 textEvent">
     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
-    <div id="10" class="row">
+    <div id="10" class="row hour-block">
      <div class="col-sm-1">10am</div>
      <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
-    <div id="11" class="row">
+    <div id="11" class="row hour-block">
      <div class="col-sm-1">11am</div> 
      <input type="text" class="input-group-text col-md-8 textEvent">  
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
-    <div id="12" class="row">
+    <div id="12" class="row hour-block">
      <div class="col-sm-1">12pm</div>
      <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
-    <div id="13" class="row">
+    <div id="13" class="row hour-block">
      <div class="col-sm-1">1pm</div>
      <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
@@ -69,14 +69,14 @@
 
     </div>
 
-    <div id="14" class="row">
+    <div id="14" class="row hour-block">
     <div class="col-sm-1">2pm</div>
     <input type="text" class="input-group-text col-md-8 textEvent">
     <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
-    <div id="15" class="row">
+    <div id="15" class="row hour-block">
      <div class="col-sm-1">3pm</div>
      <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
