debug file struct

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <h2 id="topDate"></h2>
     </header>
 
     <!-- section for the events -->
@@ -42,7 +43,7 @@
 
     <div id="10" class="row hour-block">
      <div class="col-sm-1">10am</div>
-     <input type="text" class="input-group-text col-md-8 textEvent">
+     <textarea id="10" class="input-group-text col-md-8 textEvent"></textarea>
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
