--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div id="11" class="row hour-block">
      <div class="col-sm-1">11am</div> 
-     <input type="text" class="input-group-text col-md-8 textEvent">  
+     <input id="11" type="text" class="input-group-text col-md-8 textEvent">  
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
@@ -85,14 +85,14 @@
 
     </div>
 
-    <div id="16" class="row">
+    <div id="16" class="row hour-block">
      <div class="col-sm-1">4pm</div>
      <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
 
     </div>
 
-    <div id="17" class="row">
+    <div id="17" class="row hour-block">
      <div class="col-sm-1">5pm</div>
      <input type="text" class="input-group-text col-md-8 textEvent">
      <button class="btn saveBtn col-sm-1"><i class="fas fa-bookmark"></i></button>
